force-app/main/default/objects/SPEN_SAPSLACreation__c/SPEN_SAPSLACreation__c.object-meta.xml
<CustomObject>
    <description>CRMD-6455</description>
    <label>SAP SLA Creation</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>SAP SLA Creation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP SLA Creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>