force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_CodeGroups__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CodeGroups__c</fullName>
    <label>Code Groups</label>
    <length>8</length>
    <type>Text</type>
</CustomField>