force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompletedDateTime__c</fullName>
    <description>Whenever SLA is closed it will get populated in SF</description>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>