force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_OldStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OldStatus__c</fullName>
    <label>Old Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>