force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_Plannedfinishdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Plannedfinishdate__c</fullName>
    <label>Planned finish date</label>
    <type>Date</type>
</CustomField>