force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_PlannedStartdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlannedStartdate__c</fullName>
    <label>Planned Start date</label>
    <type>Date</type>
</CustomField>