force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_PlannedStartTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PlannedStartTime__c</fullName>
    <label>Planned Start Time</label>
    <type>Time</type>
</CustomField>