force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-2625</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SAP SLA Creations</relationshipLabel>
    <relationshipName>SAP_SLA_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>