force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_SLADescription__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SLADescription__c</fullName>
    <description>CRMD-6455</description>
    <label>SLA Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>