force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>