force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_StatusForm__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StatusForm__c</fullName>
    <formula>CASE(SPEN_Status__c , &apos;E0001&apos;, &apos;Open&apos;, &apos;E0002&apos;, &apos;Cancelled&apos;,&apos;E0003&apos;, &apos;Paused&apos;, &apos;Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>