force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_TaskCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TaskCode__c</fullName>
    <label>Task Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>