force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_TimeRemaining__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TimeRemaining__c</fullName>
    <label>Time Remaining</label>
    <length>255</length>
    <type>Text</type>
</CustomField>