force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>