force-app/main/default/objects/SPEN_SAPSLACreation__c/fields/SPENPlannedFinishTime__c.field-meta.xml
<CustomField>
    <fullName>SPENPlannedFinishTime__c</fullName>
    <label>Planned finish time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>